--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ font{
     border-left: 5px solid rosybrown;
     border-radius: 5px;
     padding-left: 5px;
-    margin-bottom: 0px;
 }
 span{
     color: rgba(88, 219, 219, 0.952);
@@ -110,6 +109,7 @@ h3{
 .bottom-sec-last{
     display: flex;
     margin-top: 100px;
+    margin-bottom: 50px;
 }
 .bottom-last-width{
     width: 50%;
@@ -122,15 +122,27 @@ h3{
     margin-left: 100px;
     margin-right: 10px
 }
-h4{
-    font-size: 40px;
+.creative-section{
+    display: flex;
+    margin-top: 50px;
+}
+.creative-sec-width{
+    width: 50%;
+}
+.creative-sec-width img{
+    width: 70%;
+    margin-top: 160px;
+    margin-left: 90px;
+}
+h5{
+    font-size: 20px;
 }
 footer{
-    text-align: center;
     color: white;
+    text-align: center;
     border: 2px;
-    background-color: rgb(24, 24, 31);
-    padding-bottom: 10px;
+    background-color: rgb(129, 127, 127);
     padding-top: 5px;
-    margin-top: 50px;
+    padding-bottom: 5px;
+    margin-top: 70px;
 }
